# fsiv

2021/p1/: CMakeLists.txt  conf.txt  leeme.txt
2021/p1/src/: funciones.cc  funciones.h  main.cc
2021/p2/: CMakeLists.txt  color_balance.cc
2021/p2/prueba/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  color_balance  prueba.cc
2021/p3/: CMakeLists.txt  leeme.txt  usm_enhance.cc
2021/p4/: CMakeLists.txt  aug_real.cpp  calibrate_camera.cpp  common.cpp  common.hpp
2021/p5/: CMakeLists.txt  blur_background.cpp  test.webm
2021/tutorial/: CHANGELOG.TXT  CMakeLists.txt  CMakeLists.txt.back
2021/tutorial/src/: comp_stats.cc  esqueleto.cc  show_img.cc  show_video.cc
2122/p1/ejercicio1/: CHANGELOG.TXT  CMakeLists.txt  common_code.cpp  leeme.txt  realzar_primer_plano.cpp
2122/p1/ejercicio2/: CMakeLists.txt  cbg_process.cpp  common_code.cpp  common_code.hpp  leeme.txt  test_common_code_obf.cpp
2122/p2/color_balance/: CHANGELOG.TXT  CMakeLists.txt  color_balance.cc  common_code.cpp  funciones.cpp  funciones.hpp  test_common_code_obf.cpp
2122/p2/img_equalization/: CHANGELOG.txt  common_code.cpp  common_code.hpp  img_equalization.cpp  test_common_code_obf.cpp
2122/p3/sharpening/: CHANGELOG.TXT  common_code.cpp  common_code.hpp  leeme.txt  sharpen.cpp  test_common_code_obf.cpp
2122/p3/usm_enhance/: CMakeLists.txt  common_code.cpp  leeme.txt  test_common_code_obf.cpp  usm_enhance.cpp
2122/p4/aug_real/: CHANGELOG.TXT  CMakeLists.txt  aug_real.cpp  common_code.cpp  leeme.txt  mostrar_imagen.cc  test_common_code_obf.cpp
(+63 files in other folders)
